Closed Bug 1313064 Opened 8 years ago Closed 8 years ago

Fix setelem check in SetObjectElementOperation

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
This fixes the perf issue André described in bug 1291463 comment 0.

Regression from bug 1101905 so this is pretty old.
Attachment #8804653 - Flags: review?(andrebargull)
Comment on attachment 8804653 [details] [diff] [review]
Patch

Review of attachment 8804653 [details] [diff] [review]:
-----------------------------------------------------------------

Oh, that was simple. :-)
Attachment #8804653 - Flags: review?(andrebargull) → review+
Pushed by jandemooij@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d2f850fe57e1
Fix SETELEM check in SetObjectElementOperation to check for the strict version too. r=anba
It seems either this bug or bug 1313036 improved Octane-Gameboy a little.
https://hg.mozilla.org/mozilla-central/rev/d2f850fe57e1
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
No longer depends on: 1383591
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: