Bug 1313064 - Fix SETELEM check in SetObjectElementOperation to check for the strict version too. r=anba